# soldapi

./: .gitignore  README.md
murmur/: README.md  img_how2dalle.md
soldapi-pypi/: README.md  pyproject.toml
soldapi-pypi/src/soldapi/: __init__.py
soldapi-pypi/src/soldapi/core/qwork/: __init__.py  misc.py
